const grpc = require('grpc');

module.exports = {
  async create(call, callback) {
  },

  async clean(call, callback) {
  },

  async getById(call, callback) {
  },

  async addItem(call, callback) {
  },

  async addCoupon(call, callback) {
  },

  async qtyUpdate(call, callback) {
  },

  async calculate(call, callback) {
  },

  async removeItem(call, callback) {
  },
};